--- a/frontend/apps/gameboard-app/src/styles.scss
+++ b/frontend/apps/gameboard-app/src/styles.scss
@@ -35,8 +35,25 @@
   --ion-color-primary-tint: #1ae8ab;
 
   --ion-color-success: var(--gb-home);
+  --ion-color-success-rgb: 31, 157, 85;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255, 255, 255;
+  --ion-color-success-shade: #1b8a4b;
+  --ion-color-success-tint: #35a76d;
+
   --ion-color-warning: var(--gb-energy);
+  --ion-color-warning-rgb: 255, 106, 0;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0, 0, 0;
+  --ion-color-warning-shade: #e05e00;
+  --ion-color-warning-tint: #ff791a;
+
   --ion-color-danger: var(--gb-warn);
+  --ion-color-danger-rgb: 214, 69, 69;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255, 255, 255;
+  --ion-color-danger-shade: #bc3d3d;
+  --ion-color-danger-tint: #da5858;
 
   --ion-background-color: var(--gb-bg);
   --ion-background-color-rgb: 238, 241, 245;
